# bumpreqs

./: .vars.ini  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml
bumpreqs/: __main__.py  cli.py  core.py  marker_extract.py  vrange.py
bumpreqs/tests/: __init__.py  __main__.py  core.py  marker_extract.py  vrange.py
