[metadata]
name = bumpreqs
description = Update requirements to latest
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/bumpreqs/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = bumpreqs
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.8
install_requires =
    requests
    packaging
    click
    moreorless

[options.entry_points]
console_scripts =
    bumpreqs = bumpreqs.cli:main

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = bumpreqs/*
omit = bumpreqs/tests/*

[coverage:report]
fail_under = 98
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py38, py39, py310, py311, py312

[testenv]
deps = -rrequirements-dev.txt
allowlist_externals = make
commands =
    make test
setenv =
    py{38,39,310,311,312}: COVERAGE_FILE={envdir}/.coverage

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
